k8s/sleepr/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: reservations
  name: reservations
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reservations
  template:
    metadata:
      labels:
        app: reservations
    spec:
      containers:
        - image: us-east4-docker.pkg.dev/rugged-weaver-446607-j8/reservations/production
          name: reservations
          ports:
            - containerPort: 3004
